--- a/blog/tariff.mdx
+++ b/blog/tariff.mdx
@@ -1,15 +1,12 @@
 ---
-title: '5 YẾU TỐ ẢNH HƯỞNG TỶ GIÁ HỐI ĐOÁI'
-date: '2020-02-21'
-description: Các yếu tố ảnh hưởng đến tỷ giá hối đoái
-category: Financial Personal
+title: 'Tarrif'
+date: '2021-07-29'
+description: HaloPesa Customers enjoy the affordable Charges when making various HaloPesa transactions.
+category: "blog"
 background: '#353b48'
 image: '/assets/img/yeutoanhhuong1.jpg'
-slug: '/blog/tariff-halopesa'
 ---
 
-  
+1. P2P and Cashout Charges:
 
-Tỷ giá hối đoái dao động do một loạt các yếu tố liên quan đến nhau, nhưng phản ứng của thị trường đối với những thay đổi hiếm khi đơn giản như vậy. Tỷ giá hối đoái di chuyển do sự kết hợp của nghệ thuật và khoa học, phân tích dựa trên dữ liệu siêu logic và sự kỳ quặc của tâm lý con người. Nếu bạn thường xuyên chuyển tiền quốc tế, bạn nên quan tâm đến các cơ chế hoạt động đằng sau tỷ giá hối đoái.
-
-  
+![alt](https://i.imgur.com/JSipeLy.png)
