--- a/blog/tariff.mdx
+++ b/blog/tariff.mdx
@@ -10,3 +10,9 @@ image: '/assets/img/yeutoanhhuong1.jpg'
 1. P2P and Cashout Charges:
 
 ![alt](https://i.imgur.com/JSipeLy.png)
+
+
+2.	Transfers to Bank Charges
+
+
+![alt](https://i.imgur.com/4vVnVOF.png)
