--- a/blog/tariff.mdx
+++ b/blog/tariff.mdx
@@ -7,12 +7,12 @@ background: '#353b48'
 image: '/assets/img/yeutoanhhuong1.jpg'
 ---
 
-1. P2P and Cashout Charges:
+**_1. P2P and Cashout Charges:_**
 
 ![alt](https://i.imgur.com/JSipeLy.png)
 
 
-2.	Transfers to Bank Charges
+**_2.	Transfers to Bank Charges_**
 
 
 ![alt](https://i.imgur.com/4vVnVOF.png)
