--- a/blog/how-to-send.mdx
+++ b/blog/how-to-send.mdx
@@ -6,8 +6,45 @@ category: "blog"
 background: '#353b48'
 ---
 #### 1.	Send Money
-###### *** 1. P2P and Cashout Charges: ***
 
-###### *** 1.1.	Send to wallet ***
+**_1.1.	Send to wallet_**
 
 HaloPesa allows users to send and receive money not only to HaloPesa users but also to all mobile financial service providers in Tanzania as M-Pesa, Airtel Money, Tigo Pesa, Ezy Pesa and T- Pesa.
+
+**_a) How to send money_**
+
+-	Send with USSD HaloPesa
+
+![alt](https://i.imgur.com/3yhlevY.png)
+
+**_1.2. Send to Bank_**
+
+**_a) How to send to Bank_**
+
+-	With USSD
+
+![alt](https://i.imgur.com/3yhlevY.png)
+
+#### 2.	Pay Bills
+
+Clearing your bills is made easy with HALOPESA
+
+Clear your bills anywhere and anytime with HaloPesa, bills such as:
+
+1.	UTILITIES including**Solar Power**
+2.	TV SUBSCRIPTION including**Dstv, Zuku,Zuku fiber,Azam Tv,ZCTV and Startimes**
+3.	ONLINE PAYMENTS including**Airline services**
+4.	GOVERNMENT PAYMENTS including**Luku, Dawasco, Police payments and T**
+
+**_a)	How to use_**
+
+![alt](https://i.imgur.com/3yhlevY.png)
+
+
+#### 3. Pay Merchants
+
+Pay your invoice at a large of our Merchant Network (as HaloPesa Merchant, M-Pesa Merchant, Tigo Pesa Merchant, Visa and Masterpass Agent)
+
+**_a)	How to use_**
+
+![alt](https://i.imgur.com/3yhlevY.png)
