--- a/blog/pay-bill.mdx
+++ b/blog/pay-bill.mdx
@@ -4,7 +4,7 @@ date: '2021-07-29'
 description: Clearing your bills is made easy with HALOPESA
 ---
 
-⦁ Clear your bills anywhere and anytime with HaloPesa, bills such as::
+Clear your bills anywhere and anytime with HaloPesa, bills such as::
 
 
     ⦁	UTILITIES including Solar Power 
