--- a/blog/send-and-receive-money.mdx
+++ b/blog/send-and-receive-money.mdx
@@ -15,3 +15,5 @@ HaloPesa enable users to send and receive money between HaloPesa and HaloPesa, a
 ⦁	Select 2-6 to send money to other networks
 
 **Enjoy our Affordable Tariffs as follows:**
+
+![alt](https://i.imgur.com/JSipeLy.png) 
