--- a/blog/tariff.mdx
+++ b/blog/tariff.mdx
@@ -12,4 +12,4 @@ description: HaloPesa Customers enjoy the affordable Charges when making various
 **_2.	Transfers to Bank Charges_**
 
 
-![alt](https://i.imgur.com/4vVnVOF.png)
+![alt](https://i.imgur.com/0bJBf2L.png)
