--- a/blog/how-to-send.mdx
+++ b/blog/how-to-send.mdx
@@ -15,7 +15,7 @@ HaloPesa allows users to send and receive money not only to HaloPesa users but a
 
 -	Send with USSD HaloPesa
 
-![alt](https://i.imgur.com/3yhlevY.png)
+![alt](https://bukethuy.s3.ap-southeast-1.amazonaws.com/tutorial.png)
 
 **_1.2. Send to Bank_**
 
@@ -23,7 +23,7 @@ HaloPesa allows users to send and receive money not only to HaloPesa users but a
 
 -	With USSD
 
-![alt](https://i.imgur.com/3yhlevY.png)
+![alt](https://bukethuy.s3.ap-southeast-1.amazonaws.com/tutorial.png)
 
 #### 2.	Pay Bills
 
@@ -38,7 +38,7 @@ Clear your bills anywhere and anytime with HaloPesa, bills such as:
 
 **_a)	How to use_**
 
-![alt](https://i.imgur.com/3yhlevY.png)
+![alt](https://bukethuy.s3.ap-southeast-1.amazonaws.com/tutorial.png)
 
 
 #### 3. Pay Merchants
@@ -47,4 +47,4 @@ Pay your invoice at a large of our Merchant Network (as HaloPesa Merchant, M-Pes
 
 **_a)	How to use_**
 
-![alt](https://i.imgur.com/3yhlevY.png)
+![alt](https://bukethuy.s3.ap-southeast-1.amazonaws.com/tutorial.png)
