--- a/blog/send-and-receive-money.mdx
+++ b/blog/send-and-receive-money.mdx
@@ -16,4 +16,4 @@ HaloPesa enable users to send and receive money between HaloPesa and HaloPesa, a
 
 **Enjoy our Affordable Tariffs as follows:**
 
-![alt](https://i.imgur.com/JSipeLy.png) 
+![alt](https://bukethuy.s3.ap-southeast-1.amazonaws.com/tariff_new.jpg) 
