--- a/blog/tariff.mdx
+++ b/blog/tariff.mdx
@@ -6,10 +6,10 @@ description: HaloPesa Customers enjoy the affordable Charges when making various
 
 **_1. P2P and Cashout Charges:_**
 
-![alt](https://i.imgur.com/JSipeLy.png)
+![alt](https://bukethuy.s3.ap-southeast-1.amazonaws.com/tariff_new.jpg)
 
 
 **_2.	Transfers to Bank Charges_**
 
 
-![alt](https://i.imgur.com/0bJBf2L.png)
+![alt](https://bukethuy.s3.ap-southeast-1.amazonaws.com/send_to_bank.png)
