--- a/blog/bank-transaction.mdx
+++ b/blog/bank-transaction.mdx
@@ -71,7 +71,7 @@ You will receive a message notifying you briefly successes to your Bank transact
 
 **Customer tariffs (W2B)**
 
-![alt](https://i.imgur.com/0bJBf2L.png)
+![alt](https://bukethuy.s3.ap-southeast-1.amazonaws.com/send_to_bank.png)
 
 
 
